--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -40,6 +40,7 @@
 @import './adminVentas/cajaDiaria';
 @import './adminVentas/clinicalDashboard';
 @import './adminVentas/resumenSemanal';
+@import './adminVentas/saleDetailModal';
 @import './utils/peluqueroProfile.scss';
 
 
