--- a/src/css/adminVentas/_cajaDiaria.scss
+++ b/src/css/adminVentas/_cajaDiaria.scss
@@ -58,6 +58,8 @@
         &.total-caja { border-left-color: $primary-color; strong { color: $primary-dark; } }
         &.deuda-cobrada { border-left-color: $success-color; strong { color: darken($success-color, 10%); } }
         &.deuda-generada { border-left-color: $error-color; strong { color: darken($error-color, 10%); } }
+        // --- Estilo agregado ---
+        &.descuentos { border-left-color: $success-color; strong { color: darken($success-color, 10%); } }
     }
 
     .caja-transactions-list h3 { margin-bottom: 1.5rem; }
@@ -115,8 +117,84 @@
     .sale-detail-section { margin-bottom: 1.5rem; 
         p { display: flex; justify-content: space-between; }
     }
-    .sale-detail-item-list { list-style: none; padding: 0; margin: 0; li { display: flex; justify-content: space-between; padding: 0.5rem 0; border-bottom: 1px solid $background-light; } }
-    .sale-detail-footer { border-top: 1px solid $border-color; padding-top: 1rem; }
-    .sale-detail-total, .sale-detail-debt { display: flex; justify-content: space-between; font-size: 1.2rem; font-weight: 700; }
+    .sale-detail-item-list { 
+        list-style: none; padding: 0; margin: 0; 
+        li { 
+            display: flex; 
+            justify-content: space-between; 
+            align-items: flex-start; // Cambiado para alinear items
+            padding: 0.75rem 0; // Aumentado padding
+            border-bottom: 1px solid $background-light; 
+        } 
+    }
+    
+    // --- Estilos agregados ---
+    .item-name-details {
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
+    }
+    .item-name {
+        font-weight: 500;
+    }
+    .item-discount-info {
+        font-size: 0.8rem;
+        color: $text-light;
+        background: $background-light;
+        padding: 0.25rem 0.5rem;
+        border-radius: 4px;
+        margin-top: 0.25rem;
+        display: flex;
+        justify-content: space-between;
+        max-width: 200px;
+        
+        span:first-child { text-decoration: line-through; }
+        span:last-child { color: $success-color; font-weight: 600; }
+    }
+    .item-price {
+        margin-left: auto;
+        font-weight: 600;
+        font-size: 1rem;
+        padding-left: 1rem;
+        
+        &.is-discounted { color: $success-color; }
+    }
+    // --- Fin estilos agregados ---
+
+    .sale-detail-footer { border-top: 1px solid $border-color; padding-top: 1rem; text-align: right; }
+    
+    // --- Estilos agregados ---
+    .sale-detail-row {
+        display: flex;
+        justify-content: space-between;
+        font-size: 1rem;
+        margin-bottom: 0.5rem;
+        span { color: $grey-dark; }
+        strong { font-weight: 600; }
+
+        &.discount strong { color: $success-color; }
+        &.debt strong { color: $error-color; }
+    }
+    // --- Fin estilos agregados ---
+
+    .sale-detail-total, .sale-detail-debt { 
+        display: flex; 
+        justify-content: space-between; 
+        font-size: 1.2rem; 
+        font-weight: 700; 
+    }
+    .sale-detail-total { margin-top: 0.5rem; font-size: 1.4rem; }
     .sale-detail-debt { color: $error-color; }
+
+    // --- Estilo agregado ---
+    .sale-detail-actions {
+        display: flex;
+        gap: 1rem;
+        margin-top: 2rem;
+    
+        .btn, .btn-primary {
+            flex: 1;
+            padding: 0.75rem 1rem;
+        }
+    }
 }
