--- a/src/css/presencial/_confirmarVenta.scss
+++ b/src/css/presencial/_confirmarVenta.scss
@@ -44,22 +44,54 @@
 
         .item-info {
             display: flex;
-            align-items: center;
+            align-items: flex-start;
             gap: 0.75rem;
+            flex-grow: 1;
+        }
+        
+        .item-name-details {
+            display: flex;
+            flex-direction: column;
             flex-grow: 1;
         }
 
         .item-quantity {
             color: $grey-dark;
+            margin-right: 0.25rem;
         }
 
         .item-name {
             font-weight: 500;
         }
+        
+        .item-discount-info {
+            font-size: 0.8rem;
+            color: $text-light;
+            background: #fff;
+            padding: 0.25rem 0.5rem;
+            border-radius: 4px;
+            margin-top: 0.25rem;
+            display: flex;
+            justify-content: space-between;
+            max-width: 200px;
+            
+            span:first-child {
+                text-decoration: line-through;
+            }
+            span:last-child {
+                color: $success-color;
+                font-weight: 600;
+            }
+        }
 
         .item-price {
             margin-left: auto;
             font-weight: 600;
+            font-size: 1.1rem;
+            
+            &.is-discounted {
+                color: $success-color;
+            }
         }
     }
 
@@ -134,6 +166,16 @@
 
     .summary-row.surcharge {
         color: $warning-color;
+        font-weight: 500;
+    }
+    
+    .summary-row.discount {
+        color: $success-color;
+        font-weight: 500;
+    }
+    
+    .summary-row.debt {
+        color: $error-color;
         font-weight: 500;
     }
 
